# Kosmos-DAR-V1.0.0.0

./: .clinerules  .dockerignore  .env.example  .gitignore  .gitpod.yml  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  AUTOMATION_GAPS_AND_BEST_PRACTICES.md  BUG_REPORT.md  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_ENVIRONMENT_GUIDE.md  DEV_STAGE_AUTOMATION_ASSESSMENT.md  GETTING_STARTED.md  GUI_QUICK_START.md  IMPLEMENTATION_ROADMAP.md  LICENSE  Launch-VSCode-E.bat  MIGRATION_GUIDE.md  Makefile  NAVIGATION_AUDIT.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  README.md  REORGANIZATION_COMPLETE.md  SECURITY.md  SECURITY_INCIDENT_REPORT.md  STATUS.md  STATUS_UPDATE_DB.md  STATUS_UPDATE_HF.md  TASK_JOURNAL.md  TEAM_CHECKLIST.md  TEST_REPORT.md  alembic.ini  (+24 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: 02-test-unit.yml  03-test-integration.yml  04-test-e2e.yml  20-deploy-staging.yml  21-deploy-production.yml  build-docs.yml  ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  e2e-tests.yml  penetration-testing.yml  pr-check.yml  security.yml  update-docs.yml  validate.yml
aibom/: README.md
aibom/deprecated/: MC-000-v1.2.0.yaml
aibom/development/: MC-004-v0.9-beta.yaml  MC-005-v2.0-rc1.yaml
aibom/production/: MC-001-v2.1.0.yaml  MC-002-v1.5.2.yaml  MC-003-v3.0.1.yaml
config/: README.md
config/secrets/: .gitkeep
config/shared/: blackbox_mcp_settings.json
database/: init.sql
database/docs/: README.md
database/schemas/: 001_initial_schema.sql  README.md
docker/backend/: Dockerfile
docs/: ARCHITECTURE.md  INSTALLATION.md  README.md  TESTING.md  intro.md  mkdocs-complete.yml  mkdocs.yml  openapi.json
docs/00-executive/: closing-recommendations.md  digital-agentic-realm.md  index.md  philosophy.md  roadmap.md  value-proposition.md
docs/01-governance/: cost-governance.md  ethics-scorecard.md  index.md  kill-switch-protocol.md  legal-framework.md  pentarchy-governance.md  raci-matrix.md  risk-registry.md
docs/02-architecture/: cloud-inference.md  data-dictionary.md  data-lineage.md  index.md  mcp-strategy.md  topology.md  unified-data-fabric.md
docs/03-engineering/: aibom.md  api-design.md  canary-playbooks.md  index.md  mcp-strategy.md  penetration-testing.md  prompt-standards.md  testing-strategy.md  watermarking-standard.md
docs/04-operations/: backup-recovery.md  deployment-checklist.md  drift-detection.md  finops-metrics.md  incident-response.md  index.md  sla-slo.md
docs/05-human-factors/: accessibility.md  amnesia-protocol.md  business-continuity.md  ergonomic-design.md  index.md  red-herring-protocols.md  security-training.md  training.md  ui-ux-guidelines.md
docs/06-personal-data/: cloud-integrations.md  data-portability.md  index.md  personal-data-ecosystem.md  privacy-controls.md
docs/07-entertainment/: content-compliance.md  index.md  media-management.md  music-curation.md
docs/academy/: README.md
docs/api/: analyze-action-api-v-1-votes-analyze-action-post.api.mdx  check-server-health-api-v-1-mcp-servers-server-id-health-get.api.mdx  create-api-key-api-v-1-auth-api-keys-post.api.mdx  create-auto-proposal-api-v-1-votes-auto-proposal-post.api.mdx  create-proposal-api-v-1-votes-proposals-post.api.mdx  delete-conversation-api-v-1-chat-conversations-conversation-id-delete.api.mdx  get-agent-api-v-1-agents-agent-id-get.api.mdx  get-capabilities-api-v-1-agents-agent-id-capabilities-get.api.mdx  root-get.api.mdx  (+32 more)
frontend/: README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test_output_2.txt
gui/: ENV_CONFIG_COMPLETE.md  README.md  UPDATE_INSTRUCTIONS.md  build_exe.py  requirements.txt  setup_gui.py  test-gui-env-config.ps1  version_info.txt  web_setup.py
infrastructure/: README.md
k8s/: backend.yaml  database.yaml  frontend.yaml  secrets-template.yaml  secrets.yaml
migrations/: env.py  script.py.mako
schemas/: aibom-schema.json  model-card-schema.json  prompt-schema.json
scripts/: README.md  access_ecs.sh  auto_doc_agents.py  check_freshness.py  convert_admonitions.py  deploy_to_ecs.sh  extract_metrics.py  fix-mdx-symbols.sh  generate_c4.py  generate_lineage.py  generate_openapi.py  generate_tutorial.py  generate_tutorials.py  generate_version_matrix.py  migrate-to-docusaurus.py  run_api.ps1  run_fix.sh  run_frontend.ps1  scaffold.py  setup-interactive.ps1  setup-local-docker.ps1  setup-remote-server.ps1  setup.ps1  setup.py  setup_dns.sh  setup_frontend.ps1  setup_secrets.py  strip_ws.py  sync_aibom.py  sync_prometheus_alerts.py  test_deployment.sh  transfer_to_ecs.sh  transfer_via_aliyun.sh  validate_all.py  validate_schemas.py  validate_volume.py
src/: __init__.py  main.py
tests/: README.md  conftest.py  test_api_hardening.py  test_api_health.py  test_context7.js  test_context7_integration.js  test_memory_server.js  test_memory_server_comprehensive.js  test_swarm_integration.py  validate_mcp_config.py
website/: .lighthouserc.json  fix-navbar.sh  package-lock.json  sidebars.ts
(+583 files in other folders)
